# MyWeatherBot

./: Makefile  README.md  pyproject.toml  setup.cfg
telegram_bot/: bot.py
telegram_bot/tgbot/handlers/: user.py  weather.py
telegram_bot/tgbot/services/: setting_commands.py
tgbot/: bot.py  config.py
tgbot/handlers/: user.py  weather.py
tgbot/services/: setting_commands.py
