[tool.poetry]
name = "weatherbot"
version = "0.1.0"
description = "Telegram bot that can quickly report the weather in any city in the world"
authors = ["Andrei Feoktistov <feoae@yandex.ru>"]
readme = "README.md"
packages = [
  { include = "tgbot" },
]

[tool.poetry.dependencies]
python = "^3.8"
asyncio = "^3.4.3"
pymorphy2 = "^0.9.1"
aiogram = "^2.22.2"
environs = "^9.5.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
